<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minimal</string>
    <string name="action_settings">Settings</string>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="title">Title</string>
    <string name="remind_me">Remind Me</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Avjinder</string>
    <string name="modified_by">Adapted by Antonio</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past.</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_summary">Night mode is on</string>
    <string name="night_mode_off_summary">Night mode is off</string>

    <string name="donation">Donation</string>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="todo_error">Please enter a Todo</string>


    <string name="dialog_donate_title">Make a one-time donation</string>
    <string name="dialog_donate_content">With your help, poor developers\nwill be able to afford much needed coffee.</string>
    <string name="dialog_donate_content2">A developer with coffee is a happy developer!</string>

    <string name="donation_button_one">€3</string>
    <string name="donation_amount_one">3</string>
    <string name="donation_button_two">€5</string>
    <string name="donation_amount_two">5</string>
    <string name="donation_button_three">€10</string>
    <string name="donation_amount_three">10</string>
    <string name="donation_button_four">€15</string>
    <string name="donation_amount_four">15</string>
    <string name="donation_button_five">€20</string>
    <string name="donation_amount_five">20</string>
    <string name="donation_button_six">€25</string>
    <string name="donation_amount_six">25</string>


    <string name="payment_through_sumup">Payment through SumUp</string>
    <string name="you_need_to_be_logged_in_to_make_the_payment">You need to be logged in to make the payment</string>
    <string name="click_the_button_to_proceed">Click the Button to proceed</string>
    <string name="sign_in">Sign in</string>
    <string name="make_payment">Make payment</string>

    <string name="payment_successful">Payment successful!</string>
    <string name="congratulations_your_payment_of">Congratulations! Your payment of:</string>
    <string name="to_receipt">for the</string>
    <string name="was_receipt">was:</string>
    <string name="your_receipt_number_is">Your receipt number is:</string>
    <string name="do_you_want_to_log_out_of_sumup">Do you want to log Out of SumUp?</string>
    <string name="stay_signed_in">Stay Signed in</string>
    <string name="sign_off">Sign Off</string>


</resources>
